Water tab: Made the yellow dashed lines thicker
# 0.00.116 (56800) Sep 21, 2011
# 0.00.115 (56774) Sep 21, 2011
Water tab: Changed bucket color from "gray" to "medium light gray"
Water tab: Made "Show" control panel have a white background instead of light gray
# 0.00.114 (56757) Sep 20, 2011
Micro tab: Moved periodic table dialog to the left side of the window and underneath the solute control
# 0.00.113 (56748) Sep 20, 2011
Water tab: Made the sodium and chloride labels 50% bigger
Water tab: Made the buckets gray
Micro tab: Made the periodic table button yellow like the 3D sugar button
Micro tab: Moved the periodic table button into the solute box
Micro tab: Show the periodic table dialog at the bottom right so it doesn't obscure the "solute" control panel, and still allows the user to a large fraction of the beaker
# 0.00.112 (56714) Sep 19, 2011
Micro tab: Change periodic table colors to be more protanope-friendly
Micro tab: Change periodic table metal color to be more colorblind friendly
Changed reds to be more colorblind friendly
Macro tab: Switched red conductivity probe color to be more colorblind friendly
# 0.00.111 (56652) Sep 19, 2011
Water tab: Fixed: Sugar partial charges checkbox does not reset
# 0.00.110 (56649) Sep 18, 2011
Water tab: Added partial charge display for sucrose charges
Water tab: Added a checkbox to show charges for all sucrose atoms
Water tab: Internationalized sugar 3d view
Fixed: Periodic table legend not visible against white background
Fixed: Beaker ticks and labels not visible against white background
# 0.00.109 (56641) Sep 17, 2011
Micro tab: Even if the value is being held constant, jump directly to zero if the true concentration becomes zero, so that if all particles flow out the drain, the displayed concentration of that solute will read 0
Macro tab: Fixed: On mac, the left margin in the Concentration box is too small when "show values" is checked.  The text starts running into the side of the box for Salt.