@@ -1,3 +1,4 @@
+Water tab: Increased the bucket label font
 Water tab: Made the yellow dashed lines thicker
 # 0.00.116 (56800) Sep 21, 2011
 # 0.00.115 (56774) Sep 21, 2011
